fixed whitespace problem

--- a/style.css
+++ b/style.css
@@ -299,5 +299,4 @@ body::-webkit-scrollbar {
 }
 .c_black{
   color: black;
-  white-space:pre; 
 }
